--- a/css/background.css
+++ b/css/background.css
@@ -255,7 +255,7 @@
 
 @media (max-width: 600px) {
     .backgrounds .landing-background {
-        background: url('../assets/backgrounds/BG.jpg') no-repeat;
+        /* background: url('../assets/backgrounds/Background\ Logo.png') no-repeat; */
         background-size: cover;
         background-position: center;
     }
@@ -289,6 +289,19 @@
         height: 100vh;
         background-size: 40px 40px;
         /* background-image: linear-gradient(to right, #333333 1px, transparent 1px), linear-gradient(to bottom, #333333 1px, transparent 1px); */
+    }
+    #background-logo{
+        top: 25%;
+        animation: float 4s ease-in-out infinite;
+    }
+    #hero-robo{
+        top: 10%;
+    }
+    #hero-title{
+        max-width: 100%;
+    }
+    #hero-title > h3{
+        font-size: 3rem !important;
     }
 }
 
